--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -2,10 +2,12 @@
     background-color: #ecf0f5;
 }
 
-*[file-upload-button] {
+*[file-upload-button], *[ng-click], *[media-button] {
     cursor: pointer;
 }
-
+img{
+    max-width:100%;
+}
 .no-margin {
     margin: 0;
 }
@@ -329,10 +331,40 @@
     }
 }
 
-.widget-user{
-    .widget-user-header{
-        a{
-            color:white;
+.widget-user {
+    .widget-user-header {
+        a {
+            color: white;
         }
+    }
+}
+
+.modal-media {
+    .media-contents{
+        background-color:black;
+        text-align:center;
+        position:relative;
+        .prev, .next{
+            position:absolute;
+            font-size:3em;
+            color:white;
+            top:35%;
+        }
+        .prev{
+            left:10px;
+        }
+        .next{
+            right:10px;
+        }
+    }
+    .modal-body {
+        img {
+            max-width: 100%;
+        }
+    }
+}
+.media-list{
+    .media-item{
+        margin-bottom:15px;
     }
 }
