--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -342,6 +342,10 @@ img {
 }
 
 .modal-media {
+    .post-time {
+        color: #999;
+        font-size: 12px;
+    }
     .media-contents {
         background-color: black;
         text-align: center;
