Fixed edit profile link in layout dropdown

--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -152,7 +152,7 @@
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a ui-sref="layoutAdministration.useredit.basic({ id: CurrentUser.Id })" href="#" class="btn btn-default btn-flat">Edit</a>
+                                    <a ui-sref="layoutMobSocial.twoColumns.editProfile({ tab: null })" href="#" class="btn btn-default btn-flat">Edit</a>
                                 </div>
                                 <div class="pull-right" ng-controller="loginController">
                                     <a href="#" class="btn btn-default btn-flat" ng-click="logout()">Sign out</a>
