--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-administration.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-administration.html
@@ -347,6 +347,9 @@
                     <li ng-class='{"active": $state.includes("layoutAdministration.settings", { settingType: "security" })}'>
                         <a ui-sref="layoutAdministration.settings({ settingType: 'security' })"><i class="fa fa-circle-o"></i> Security Settings</a>
                     </li>
+                    <li ng-class='{"active": $state.includes("layoutAdministration.settings", { settingType: "email" })}'>
+                        <a ui-sref="layoutAdministration.settings({ settingType: 'email' })"><i class="fa fa-circle-o"></i> Email Accounts</a>
+                    </li>
                     <li ng-class='{"active": $state.includes("layoutAdministration.settings", { settingType: "datetime" })}'>
                         <a ui-sref="layoutAdministration.settings({ settingType: 'datetime' })"><i class="fa fa-circle-o"></i> Localization Settings</a>
                     </li>
