--- a/Presentation/mobSocial.WebApp/pages/components/timeline.html
+++ b/Presentation/mobSocial.WebApp/pages/components/timeline.html
@@ -6,7 +6,7 @@
             </div>
             <div class="post-box col-xs-11">
                 <div class="form-group">
-                    <textarea ng-model="PostData.Message" placeholder="What's on your mind" class="form-control"></textarea>
+                    <textarea ng-model="PostData.Message" smart-area="smartConfig.user" ng-trim="false" placeholder="What's on your mind" class="form-control"></textarea>
                 </div>
                 <div class="form-group text-right">
                     <span ng-include="'/pages/components/timelinePostFormWidgets.html'"></span>
