--- a/Presentation/mobSocial.WebApp/pages/components/followButton.html
+++ b/Presentation/mobSocial.WebApp/pages/components/followButton.html
@@ -13,7 +13,7 @@
                     <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="#" ng-click="Unfollow()">Unfollow</a></li>
+                    <li><a ng-click="Unfollow()">Unfollow</a></li>
                 </ul>
             </span>
         </span>
