--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -61,17 +61,19 @@
                         <!-- Menu toggle button -->
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-bell-o"></i>
-                            <span class="label label-warning">10</span>
+                            <span class="label label-warning" ng-if="CurrentUser.UnreadNotificationCount > 0">
+                                {{CurrentUser.UnreadNotificationCount}}
+                            </span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li class="header">You have 10 notifications</li>
+                            <li class="header">You have {{CurrentUser.UnreadNotificationCount}} notification(s)</li>
                             <li>
                                 <!-- Inner Menu: contains the notifications -->
                                 <ul class="menu">
-                                    <li>
-                                        <!-- start notification -->
-                                        <a href="#">
-                                            <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                                    <li ng-repeat="notification in CurrentUser.Notifications">
+                                        <a ng-if="notification.EventName == 'UserFollowed'" ui-sref="layoutMobSocial.userprofile.tabs({ idOrUserName:  notification.EntityId })">
+                                            <img ng-src="{{notification.InitiatorImageUrl}}" class="img-sm img-circle margin-r-5" />
+                                            <strong>{{notification.EntityTitle}}</strong> is now following you
                                         </a>
                                     </li>
                                     <!-- end notification -->
