--- a/Presentation/mobSocial.WebApp/pages/components/friendButton.html
+++ b/Presentation/mobSocial.WebApp/pages/components/friendButton.html
@@ -12,7 +12,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#"  ng-click="UpdateFriendship('decline')">Cancel Friendship Request</a></li>
+                <li><a ng-click="UpdateFriendship('decline')">Cancel Friendship Request</a></li>
             </ul>
         </span>
     </span>
@@ -33,7 +33,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#" ng-click="UpdateFriendship('decline')">Cancel Friendship Request</a></li>
+                <li><a ng-click="UpdateFriendship('decline')">Cancel Friendship Request</a></li>
             </ul>
         </span>
     </span>
