--- a/Presentation/mobSocial.WebApp/pages/components/timeline.html
+++ b/Presentation/mobSocial.WebApp/pages/components/timeline.html
@@ -2,7 +2,7 @@
     <div class="post post-form">
         <div class="user-block row">
             <div class="col-xs-1">
-                <img class="img-circle img-bordered-sm" ng-src="{{CurrentUser.ProfileImageUrl}}" alt="user image" />
+                <img class="img-circle img-bordered-sm hidden-sm hidden-xs" ng-src="{{CurrentUser.ProfileImageUrl}}" alt="user image" />
             </div>
             <div class="post-box col-xs-11">
                 <div class="form-group">
