--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -21,7 +21,7 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- Messages: style can be found in dropdown.less-->
-                    <li class="dropdown messages-menu">
+                    <li class="dropdown notifications-menu">
                         <!-- Menu toggle button -->
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-user-o"></i>
