--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -285,3 +285,7 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
     height: 400px;
     overflow: auto; }
 
+.navbar-nav > .notifications-menu > .dropdown-menu > li .menu > li > a {
+  white-space: normal !important;
+  overflow: auto; }
+
