--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.scss
@@ -428,3 +428,8 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
         overflow:auto;
     }
 }
+.navbar-nav>.notifications-menu>.dropdown-menu>li .menu>li>a
+{
+    white-space:normal!important;
+    overflow:auto;
+}
